--- a/exp8/task1result_uarch.conv2/config/state.cfg
+++ b/exp8/task1result_uarch.conv2/config/state.cfg
@@ -1,4 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <root>
  <guiEngine type="bag"/>
+ <viewpoint>
+  <name>Microarchitecture Exploration</name>
+ </viewpoint>
+ <bottomUpPane>
+  <state>
+   <grouping_id>/GenericProcess/Function/GenericThread/ParentCallStack</grouping_id>
+   <splitterPosition>29.2743%</splitterPosition>
+  </state>
+ </bottomUpPane>
+ <pmuEventsBottomUpPane>
+  <state>
+   <grouping_id>/Function/ParentCallStack</grouping_id>
+   <sortOrderAscending type="bool">true</sortOrderAscending>
+   <splitterPosition>11.1388%</splitterPosition>
+   <sortedColumn>
+    <query>PMUEventType[ARITH.FPU_DIV_ACTIVE]</query>
+    <flag type="s32_t">20</flag>
+   </sortedColumn>
+  </state>
+ </pmuEventsBottomUpPane>
 </root>
